# eduid-backend

./: .coveragerc  .editorconfig  .gitignore  .isort.cfg  .jenkins.yaml  .travis.yml  AGENTS.md  Dockerfile  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  README.txt  api_requirements.txt  babel.cfg  client_requirements.in  client_requirements.txt  conftest.py  constraints.txt  falconapi_requirements.in  falconapi_requirements.txt  fastapi_requirements.in  fastapi_requirements.txt  manifest  mypy.ini  protokoll.txt  publiccode.yml  pyproject.toml  pytest.ini  requirements-testing.txt  requirements.in  requirements.txt  ruff.toml  satosa_scim_requirements.in  satosa_scim_requirements.txt  setup.cfg  setup.py  setup.py.orig  (+8 more)
.devcontainer/: Dockerfile  devcontainer.json  devcontainer.pysaml2.example.json
.github/workflows/: codeql-analysis.yml  run-tests.yaml
config-templates/: dev.yaml  development.ini  saml2_settings.py
cookiecutter-app/: cookiecutter.json
cookiecutter-app/{{cookiecutter.directory_name}}/: __init__.py  app.py  run.py  schemas.py  views.py
cookiecutter-app/{{cookiecutter.directory_name}}/settings/: common.py
cookiecutter-app/{{cookiecutter.directory_name}}/tests/: test_app.py
doc/: Makefile  development.md  group_management.puml  idp-actions.rst  ladok.puml  letter_proofing.puml  login.puml  microservice-development.rst  personal_data.puml  python-bootstrap.md  reset_password.puml  security.puml  translate.rst
docker/: Dockerfile  build.sh  setup.sh  start.sh
eduid_am/: __init__.py  celery.py  common.py  config.py  consistency_checks.py  db.py  exceptions.py  fetcher_registry.py  tasks.py  testing.py  user.py  userdb.py  worker.py
eduid_am/ams/: __init__.py  common.py  tou.py
eduid_am/tests/: __init__.py  test_am.py  test_index.py  test_mongo.py  test_proofing_fetchers.py  test_signup.py  test_tasks.py  test_user.py  test_userdb.py
eduid_lookup_mobile/: __init__.py  celery.py  common.py  config.py  decorators.py  tasks.py  testing.py  utilities.py  worker.py
eduid_lookup_mobile/client/: __init__.py  mobile_lookup_client.py
eduid_lookup_mobile/development/: development_search_result.py  nin_mobile_db.py
eduid_lookup_mobile/test/: eduid_lookup_mobile.ini  test_decorators.py  test_lookup.py  test_verifiers.py
eduid_lookup_mobile/test/data/: test.ini
eduid_msg/: __init__.py  cache.py  celery.py  config.py  db.py  decorators.py  exceptions.py  tasks.py  testing.py  utils.py  worker.py
eduid_msg/tests/: __init__.py  test_config.py  test_decorators.py  test_mongo.py  test_postaladdress.py  test_tasks.py  test_utils.py
eduid_msg/tests/data/: test.ini  test.tmpl
eduid_scimapi/: app.py  base.py  exceptions.py  middleware.py
eduid_scimapi/resources/: users.py
eduid_scimapi/tests/: test_context.py
import/: import-repos.sh  move-files.sh  update-imports.sh
import/VCCS2/: .gitignore  Dockerfile  LICENSE.txt  Makefile  requirements.txt
import/VCCS2/docker/: build.sh  start.sh
import/eduid-am/: .gitignore  .jenkins.yaml  Makefile  test_requirements.txt
import/eduid-am/docker/: build.sh
import/eduid-common/: .gitignore  api_requirements.txt  setup.py  worker_requirements.in
import/eduid-graphdb/: .gitignore  .jenkins.yaml  .travis.yml  LICENSE.txt  Makefile  README.txt  setup.py  test_requirements.txt
import/eduid-lookup-mobile/: Makefile  README.md  requirements.in  setup.cfg  test_requirements.txt
import/eduid-lookup-mobile/eduid_lookup_mobile/: decorators.py
import/eduid-queue/: .gitignore  Dockerfile  LICENSE  client_requirements.in  requirements.in  requirements.txt  setup.cfg  test_requirements.txt
import/eduid-queue/docker/: build.sh  setup.sh  (+1 more)
import/eduid-scimapi/: .jenkins.yaml  Dockerfile  setup.py  test_requirements.txt
import/eduid-userdb/: .coveragerc  .jenkins.yaml  Makefile  requirements.in  requirements.txt  setup.cfg  setup.py  test_requirements.in
import/eduid-webapp/: Makefile  setup.cfg  test_requirements.txt
import/eduid_msg/: .gitignore  Makefile  README.rst  requirements.txt  setup.cfg
react/personal_data/: index.js
requirements/: Makefile  actions.txt  authn.txt  common.txt  constraints.txt  dev.txt  eidas.txt  falconapi_requirements.in  falconapi_requirements.txt  fastapi_requirements.in  fastapi_requirements.txt  group_management.txt  idp.txt  letter_proofing.txt  lookup_mobile_proofing.txt  main.in  main.txt  oidc_proofing.txt  prod.txt  proofing_consumer.txt  satosa_scim_requirements.in  satosa_scim_requirements.txt  security.txt  signup.txt  sub_main.in  sub_main.txt  test_requirements.in  test_requirements.txt  testing.txt  typecheck_requirements.in  typecheck_requirements.txt  webapp_requirements.in  webapp_requirements.txt  worker_requirements.in  worker_requirements.txt
scripts/: insert.py  python_requires_helper.py
scripts/tests/: test_python_requires_helper.py
snyk-test-requirements/: requirements.txt
src/: conftest.py
src/eduid/: py.typed
src/eduid_common/: __init__.py
src/eduid_graphdb/: __init__.py  db.py  helpers.py  testing.py
src/eduid_groupdb/: __init__.py  attributes.py  db.py  exceptions.py  group.py  groupdb.py  helpers.py  testing.py
src/eduid_queue/: config.py  db.py  decorators.py  exceptions.py  helpers.py  log.py  main.py  misc.py  tasks.py  testing.py
src/eduid_scimapi/: app.py  config.py  context.py  exceptions.py  group.py  groupdb.py  log.py  middleware.py  notifications.py  profile.py  run.py  scimbase.py  scimuser.py  search.py  testing.py  user.py  userdb.py  utils.py
src/eduid_userdb/: __init__.py  authninfo.py  credentials.py  data_samples.py  db.py  deprecation.py  element.py  event.py  exceptions.py  locked_identity.py  mail.py  nin.py  orcid.py  password.py  phone.py  primaryelement.py  profile.py  testing.py  tou.py  u2f.py  user.py  userdb.py  util.py
src/eduid_webapp/: __init__.py  amrelay.py  babel.cfg  messages.pot  old_verifications.py
src/satosa_plugin/: scim_attributes.py
src/satosa_uppercase/: __init__.py
test-scripts/: README.md  find.sh  scim-util.py  scimapi_env  set-display-name.sh
(+1595 files in other folders)
